set(the_description "The UbiTrack Haptics Library")
ut_add_module(uthaptics INTERNAL utcore utdataflow)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake")
set(LEVMAR_ROOT "${EXTERNAL_LIBRARIES_DIR}/levmar")
FIND_PACKAGE(Levmar)
IF(LEVMAR_FOUND)
    add_definitions(-DHAVE_LEVMAR)
ENDIF(LEVMAR_FOUND)
ut_module_include_directories(../ ${UBITRACK_CORE_DEPS_INCLUDE_DIR} ${LEVMAR_INCLUDE_DIR})
ut_glob_module_sources(HEADERS "*.h" "*/*.h" SOURCES "*.cpp")
ut_create_module(${LEVMAR_LIBRARIES})
